--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
-name = "rust-query"
-version = "0.0.1"
+name = "query"
+version = "0.1.0"
 authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
 
 [dependencies.url]
