--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ license = "MIT"
 [dependencies]
 rustc-serialize = "*"
 url = "*"
-regex = "*"
-lazy_static = "0.1.10"
+regex = "0.1"
+lazy_static = "0.1.*"
