--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "queryst"
-version = "0.1.15"
+version = "0.1.16"
 authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
 description = "Rust query string parser with nesting support"
 repository = "https://github.com/rustless/queryst"
@@ -9,7 +9,7 @@ keywords = ["json", "web", "url", "parser"]
 license = "MIT"
 
 [dependencies]
-rustc-serialize = "*"
-url = "*"
+rustc-serialize = "0.3"
+url = "0.5"
 regex = "0.1"
-lazy_static = "0.1.*"
+lazy_static = "0.1"
