--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 
-name = "queryst"
-version = "1.0.1"
-authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
-description = "Rust query string parser with nesting support"
+name = "queryst-prime"
+version = "2.0.0"
+authors = ["Stanislav Panferov <fnight.m@gmail.com>", "Robert Lord <hello@lord.io>"]
+description = "Rust query string parser with nesting support, forked to update Serde"
 repository = "https://github.com/rustless/queryst"
 keywords = ["json", "web", "url", "parser"]
 license = "MIT"
