--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ keywords = ["json", "web", "url", "parser"]
 license = "MIT"
 
 [dependencies]
-serde = "0.9"
-serde_json = "0.9"
-url = "1"
-regex = "0.1"
-lazy_static = "0.2"
+serde = "^1"
+serde_json = "^1"
+url = "^1"
+regex = "^0.2"
+lazy_static = "^1"
