--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: rust
 script:
   - cargo build --verbose
   - cargo test --verbose
+  - cargo test --no-default-features --verbose
   - cargo doc
 
