chore(*): Specify MSRV (see rust-lang/rfcs#2495)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Rust query string parser with nesting support, forked to update S
 repository = "https://github.com/rustless/queryst"
 keywords = ["json", "web", "url", "parser"]
 license = "MIT"
+rust = "1.13"
 
 [features]
 default = ["regex1"]
