--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [package]
-
 name = "queryst"
 version = "2.1.1-alpha.0"
 authors = ["Stanislav Panferov <fnight.m@gmail.com>", "Robert Lord <hello@lord.io>"]
@@ -8,6 +7,7 @@ repository = "https://github.com/rustless/queryst"
 keywords = ["json", "web", "url", "parser"]
 license = "MIT"
 rust = "1.13"
+include = ["src/**/*", "LICENSE", "README.md"]
 
 [features]
 default = ["regex1"]
@@ -16,6 +16,6 @@ regex1 = ["regex", "lazy_static"]
 [dependencies]
 serde = "^1"
 serde_json = "^1"
-url = "^1"
-regex = { version = "^0.2", optional = true }
+percent-encoding = "^2"
+regex = { version = "^1", optional = true }
 lazy_static = { version = "^1", optional = true }
