--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Rust query string parser with nesting support, forked to update S
 repository = "https://github.com/rustless/queryst"
 keywords = ["json", "web", "url", "parser"]
 license = "MIT"
+edition = "2021"
 include = ["src/**/*", "LICENSE", "README.md"]
 
 [features]
